2008-03-28  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/data/general/DatasetUtilities.java
    (findRangeBounds(XYDataset, boolean)): Use boolean argument for call to
    iterateRangeBounds(),
    (iterateXYRangeBounds): Deprecated,
    (iterateRangeBounds(XYDataset)): New method,
    (iterateRangeBounds(XYDataset, boolean)): Likewise. 

2008-03-28  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/data/general/DatasetUtilities.java
    (sampleFunction2D): Fixed sample count bug.

2008-03-27  David Gilbert  <david.gilbert@object-refinery.com>

    Bug 1927239:
    * source/org/jfree/chart/renderer/category/WaterfallBarRenderer.java
    (findRangeBounds): Reimplemented to account for the special treatment of
    the value in the final category,
    * source/org/jfree/data/general/DatasetUtilities.java
    (findCumulativeRangeBounds): Include final category.

2008-03-27  David Gilbert  <david.gilbert@object-refinery.com>

    Bug 1926517:
    * source/org/jfree/chart/plot/CombinedDomainCategoryPlot.java:
    (getDataRange): Override just to document,
    * source/org/jfree/chart/plot/CombinedDomainXYPlot.java
    (getDataRange): Added javadoc comment,
    * source/org/jfree/chart/plot/CombinedRangeCategoryPlot.java
    (getDataRange): Likewise,
    * source/org/jfree/chart/plot/CombinedRangeXYPlot.java
    (getDataRange): Likewise.

2008-03-27  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/renderer/category/BoxAndWhiskerRenderer.java
    (drawHorizontalItem): Draw box outline using itemOutlinePaint/Stroke,
    (drawVerticalItem): Likewise,
    * source/org/jfree/chart/renderer/xy/XYBoxAndWhiskerRenderer.java
    (lookupBoxPaint): New method,
    (drawHorizontalItem): Do lookup for box fill paint,
    (drawVerticalItem): Likewise.

2008-03-26  David Gilbert  <david.gilbert@object-refinery.com>

    Patch 1918209:
    * source/org/jfree/chart/axis/LogAxis.java